# tesseract-core

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README-preview.md  README.md  benchmark_tcp_throughput.py  build-podman-nersc.sh  cliff.toml  inject_runtime_pyproject.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run-podman-nersc.sh  shapeopt.md  test-podman.sh
.github/: CODEOWNERS  codecov.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml  config.yml
.github/scripts/: compare_benchmarks.py
.github/workflows/: benchmarks.yml  build_docs.yml  bump_lockfile.yml  cla.yml  get_bump_type.sh  get_coverage.yml  get_new_version.sh  pre-commit-cron-updater.yml  pre_commit.yml  publish.yml  release.yml  run_advanced_examples.yml  run_tests.yml  test_pip_install.yml  update_runtime_deps.py
advanced_examples/lorenz/: demo.ipynb  requirements.txt
benchmarks/: .gitignore  bench_array_encoding.py  bench_tesseract.py  compare_benchmarks.py  conftest.py  example_results.json  generate_plots.py  micro_serde.py  profile_http.py  pytest.ini  run_benchmarks.py  test_array_encoding.py  test_jax_recipes.py  test_tesseract.py  utils.py
benchmarks/tesseract_noop/: tesseract_api.py  tesseract_config.yaml
deleteme/: finite_differences.py
demo/_showcase/: README.md
demo/bayesian-inference/: _test_e2e.py  demo.ipynb  lorenz96_two_scale_F_18_sample_0_small.npz  requirements.txt
demo/cfd/: demo.ipynb
demo/cfd-optimization/: demo.ipynb  requirements.txt
demo/data-assimilation/: demo.ipynb
demo/data-assimilation-4dvar/: demo.ipynb
demo/enzyme-lfortran/: .gitignore  README.md  demo.ipynb  tesseract_api.py  tesseract_config.yaml
demo/enzyme_thermal_2d/: README.md  demo.ipynb  enzyme-optimization.ipynb  generate_blog_figures.py  generate_pipeline_diagram.py  inverse_heat_transfer.ipynb  requirements.txt  tesseract_api.py  tesseract_config.yaml
demo/fem-shape-optimization/: demo.ipynb
demo/fem-shapeopt/: demo.ipynb
demo/jax_thermal_2d/: README.md  benchmark.py  tesseract_config.yaml
demo/julia-diffeq/: demo.ipynb  requirements.txt
demo/learned-closure/: demo.ipynb  requirements.txt  test_solvers.py
demo/multiphysics-optimization/: demo-executed.ipynb  demo.ipynb  requirements.txt  test_solvers.py
demo/showcase/: demo.ipynb
docs/: .gitignore  conf.py  demo.tape  index.md  landing.md  requirements.txt
docs/_templates/: blog_index.html  blog_index.md.jinja  blog_post.html  page.html
docs/blog/: 2025-03-10-tesseract-core-announcement.md  2025-06-30-pipeline-autodiff.md  2025-08-03-beginners-guide.md  2025-11-28-rocket-fin-optimization.md  2026-01-20-hackathon-winners.md  2026-03-28-welcome.md  2026-05-15-fortran-enzyme-autodiff.md  2026-06-29-enzyme-lfortran-autodiff.md  2026-07-09-enzyme-lfortran-autodiff.md  index.md  tesseract-for-rnd-engineers.md  tesseract-for-rse.md
docs/content/: debugging.md
docs/static/: custom.css  top-nav.css
examples/: README.md
examples/_matlab_springmass/: Dockerfile.matlab-base  README.md  tesseract_api.py  tesseract_config.yaml  visualize.py
examples/bandedblock_cholmod/: enzyme_wrappers.jl  tesseract_api.py  tesseract_config.yaml
examples/conda/: README.md  build_python_venv.sh  tesseract_api.py  tesseract_config.yaml  tesseract_environment.yaml
examples/cuda/: tesseract_api.py  tesseract_requirements.txt
examples/cuda-image/: tesseract_api.py
examples/dataloader/: test-runtime.sh  test-tesseract.sh  test_tesseract.py
examples/dataloader-filereference/: tesseract_api.py  tesseract_config.yaml  test.py
examples/directoryreference/: inputs.json  tesseract_api.py  tesseract_config.yaml  test_tesseract.py
examples/enzyme_ad/: README.md  tesseract_api.py  tesseract_config.yaml
examples/file_io/: tesseract_api.py  tesseract_config.yaml
examples/filereference/: README.md  generate_data.py  tesseract_api.py  tesseract_config.yaml  (+1 more)
extra-mlflow/: docker-compose-mlflow.yml
joss-paper/: paper.bib  paper.md
tests/: conftest.py  schema_example_generator.py  test_cuda_ipc.py  test_schema_example_generator.py
tutorial/: conftest.py  test_bootcamp.py
(+758 files in other folders)
