[project]
name = ""
# TODO: add a short description here (same as in GitHub UI)
description = ""
readme = "README.md"
authors = [
    {name = "The  team @ Pasteur Labs", email = "info@simulation.science"},
]
requires-python = ">=3.10,<3.14"
# TODO: add your dependencies here
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pasteurlabs/"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx_autodoc_typehints",
    "furo",
    "myst-parser",
]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "typeguard",
    # Add other extras here, too
    "[docs]",
]

[build-system]
requires = ["setuptools", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["", ".*"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "/_version.py"
versionfile_build = "/_version.py"
tag_prefix = "v"
parentdir_prefix = "-"

[tool.pytest.ini_options]
# Test type hints via typeguard - disabled by default
# addopts = ["--typeguard-packages="]
testpaths = ["tests"]
filterwarnings = [
    "error",
    # ignored by default
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
    # raised by Cython, usually harmless
    "ignore:numpy.dtype size changed",
    "ignore:numpy.ufunc size changed",
    # sometimes, dependencies leak resources
    "ignore:.*socket\\.socket.*:pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
branch = true
source = [""]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]
ignore_errors = true
omit = [
    "/_version.py",
]
